--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,10 +15,7 @@ jobs:
   build-and-test:
     uses: networkservicemesh/.github/.github/workflows/build-and-test.yaml@main
     with:
-      os: '["ubuntu-latest", "macos-latest", "windows-latest"]'
-
-  golangci-lint:
-    uses: networkservicemesh/.github/.github/workflows/golangci-lint.yaml@main
+      os: '["ubuntu-latest"]'
 
   restrict-nsm-deps:
     uses: networkservicemesh/.github/.github/workflows/restrict-nsm-deps.yaml@main
